--- a/css/about.css
+++ b/css/about.css
@@ -38,7 +38,7 @@ h1, h2, h3, h4, h5, h6, p, a, ul, span, li, img, inpot, button{ margin: 0; paddi
 
 h1,h2,h3,h4,h5,h6{ line-height: 1.5; font-weight: inherit; }
 
-h1,h2,h3{ font-family: "Roboto Condensed", cursive; }
+h1,h2,h3{ font-family: "sans-serif"; }
 
 p{ line-height: 1.6; font-size: 1em; font-weight: 400; color: #343b44; }
 
